2010-11-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/system.c (inet_aton): Removed this function. This
	function appears to be available on any relevant OpenVAS
	platform and thus we do not need a fall-back anymore.

2010-11-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/CMakeLists.txt: Changed install directory for headers
	of library "misc" from "openvas" to "openvas/misc".

	* nasl/nasl.h, hg/hosts_gatherer.h, misc/plugutils.h,
	nasl/nasl_debug.c: Adjusted include paths accordingly.

2010-11-09  Michael Wiegand <michael.wiegand@greenbone.net>

	New functions for network level scans as described in OpenVAS Change
	Request #49 (see http://www.openvas.org/openvas-cr-49.html).

	* nasl/nasl_scanner_glue.c (scan_phase, network_targets): New
	functions to retrieve the current scan phase and network targes from
	the KB.

	* nasl/nasl_scanner_glue.h: Updated.

	* nasl/nasl_init.c: Exposed new functions.

2010-11-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	This patch removes the use of arglist elements for storing
	NVT meta data. It is replaced by usng the NVTI structure.
	This lowers the overall memory footprint of the scanner.
	It is also intended that the use of the plug_set* and plug_get*
	commands is reduced in the scanner, removed entirely in the
	optimal case.
 
	* misc/plugutils.c (plug_set_nvti, plug_get_nvti): New.
	(plug_set_version, plug_get_version, plug_set_path, plug_get_path,
	plug_set_id, plug_get_oid, plug_get_oid, plug_set_cve_id,
	plug_get_cve_id, plug_set_bugtraq_id, plug_get_bugtraq_id,
	plug_set_xref, plug_get_xref, plug_set_tag, plug_get_tag,
	plug_set_sign_key_ids, plug_get_sign_key_ids, plug_set_family,
	plug_get_family, plug_require_key, plug_get_required_keys,
	plug_mandatory_key, plug_get_mandatory_keys, plug_exclude_key,
	plug_get_excluded_keys, plug_require_port, plug_get_required_ports,
	plug_require_udp_port, plug_get_required_udp_ports, plug_set_dep,