@@ -1,3 +1,7 @@
+2010-11-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* base/CMakeLists.txt: Removed accidental change in last commit.
+
 2010-11-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* misc/system.c (inet_aton): Removed this function. This
